--- a/tanuarta/src/Components/HamburgerMenu.module.scss
+++ b/tanuarta/src/Components/HamburgerMenu.module.scss
@@ -1,16 +1,13 @@
 .box {
   background-color: black;
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   height: 100%;
   width: 100%;
   padding-left: 1.5%;
-  z-index: -99;
-}
-
-.hidden { 
-  display: none;
+  z-index: 50;
+  padding-top: 10%;
 }
 
 .menuText {
@@ -19,6 +16,7 @@
   font-size: 4vw;
   margin-left: 10%;
   margin-bottom: 5%;
+  z-index: 99;
   
   /* disable highlighting */
   -webkit-user-select: none; /* Safari */
