--- a/tanuarta/src/Pages/Home.module.scss
+++ b/tanuarta/src/Pages/Home.module.scss
@@ -1,10 +1,12 @@
 .main {
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .headingBox {
   padding-top: 10%;
   font-family: 'Inter';
   font-size: 4vw;
+  color: white;
 }
